# gnostr_qr

./: .gitignore  Cargo.toml  GNUmakefile  README.md  cargo.mk  gnostr_github.txt  gnostr_tagline.txt
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
wix/: main.wxs
